# DelDec

./: CMakeLists.txt  ball.cpp  ball.h  ball_test.h  configure.h  delaunaydecomposition.cpp  delaunaydecomposition.h  helper.h  io.h  kernel.cl  main.cpp  marks.h  point.h  point_test.h  subspan.cpp  subspan.h  subspan_test.h  test.cpp
